--- a/package.json
+++ b/package.json
@@ -3,7 +3,7 @@
   "version": "0.0.1",
   "scripts": {
     "ng": "ng",
-    "start": "ng serve", 
+    "start": "ng serve",
     "start2": "set NODE_OPTIONS=--openssl-legacy-provider && ng serve --host 0.0.0.0",
     "build": "ng build",
     "build-prod": "set NODE_OPTIONS=--openssl-legacy-provider && ng build --prod",
@@ -33,6 +33,7 @@
     "@angular/compiler-cli": "~12.2.0",
     "@types/jasmine": "~3.8.0",
     "@types/node": "^12.11.1",
+    "angular-cli-ghpages": "^1.0.7",
     "gh-pages": "^6.0.0",
     "jasmine-core": "~3.8.0",
     "karma": "~6.3.0",
